--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="app_name">testing</string>
+    <string name="app_name">BookShelf</string>
     <string name="add_new_book">add new book</string>
+    <string name="delete_question">Do you want to delete this book?</string>
+    <string name="dialog_confirm">Yes</string>
+    <string name="dialog_cancel">No</string>
 </resources>
